--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Build and push Docker images
         uses: docker/build-push-action@v1.1.0
-        # with:
-          # username: moritzbuehrer
-          # password: ${{ secrets.DOCKER_PASSWORD }}
-          # repository: moritzbuehrer/craftsman 
-          # tags: latest
+        with:
+          username: moritzbuehrer
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: moritzbuehrer/craftsman-frontend
+          tags: latest
