--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.5.4",
     "axios": "^0.20.0",
-    "google-maps-react": "^2.0.6",
+    "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
